--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,10 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200 
+
+[functions]
+  node_bundler = "esbuild"
+
+# Enable Netlify KV store
+[template.environment]
+  NETLIFY_ENABLE_KV = "true" 
