Implement robust data persistence with multiple fallback mechanisms

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,11 @@
   to = "/.netlify/functions/:splat"
   status = 200 
 
+[[redirects]]
+  from = "/update-data"
+  to = "/.netlify/functions/update-data"
+  status = 200
+
 [functions]
   node_bundler = "esbuild"
 
