--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
-    "axios": "^1.8.3"
+    "axios": "^1.8.3",
+    "multiparty": "^4.2.3"
   },
   "devDependencies": {
     "netlify-cli": "^17.0.0"
